// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`layout 指定時の displayWeatherWarningCore > 非デフォルト構成 snapshot: narrow 幅 + tableOverflowDetail: false (spec §7) 1`] = `
"

 ☆ L3 大雨警報　東部　解除 1

╔══════════════════════════════════════════════════════════╗
║ 島根県大雨警報・注意報  発表  [警告]                     ║
╠     ☆ 警報 (L3)      ════════════════════════════════════╣
║ 級   種別                 地域                           ║
║ ☆    L3 大雨警報          松江地区                       ║
║ ☆    L3 大雨警報          出雲地区                       ║
║ ☆    L3 大雨警報          雲南地区                       ║
║ ☆    L3 大雨警報          大田邑智地区                   ║
║ ☆    L3 大雨警報          浜田地区                       ║
║ ☆    L3 大雨警報          益田地区                       ║
╠        ▼ 解除        ════════════════════════════════════╣
║ 級   種別                 地域                           ║
║ ▼    大雨注意報           隠岐                           ║
╠[行動の目安]══════════════════════════════════════════════╣
║   ☆ L3 警報 → 高齢者等は避難                             ║
╠══════════════════════════════════════════════════════════╣
║ VPWW55  2024-11-02 11:19:00  気象庁                      ║
╚══════════════════════════════════════════════════════════╝
"
`;

exports[`layout 指定時の displayWeatherWarningCore > 非デフォルト構成 snapshot: unknown 非表示 (allowHiddenUnknown 相当の resolved 値) 1`] = `
"

 ☆ L3 大雨警報　東部　解除 1

╔══════════════════════════════════════════════════════════════════════════════╗
║ 島根県大雨警報・注意報  発表  [警告]                                         ║
╠     ☆ 警報 (L3)      ════════════════════════════════════════════════════════╣
║ 級   種別                 地域            状態                               ║
║ ☆    L3 大雨警報          松江地区             継続                          ║
║ ☆    L3 大雨警報          出雲地区             継続                          ║
║ ☆    L3 大雨警報          雲南地区             継続                          ║
║ ☆    L3 大雨警報          大田邑智地区         継続                          ║
║ ☆    L3 大雨警報          浜田地区             継続                          ║
║ ☆    L3 大雨警報          益田地区             継続                          ║
╠        ▼ 解除        ════════════════════════════════════════════════════════╣
║ 級   種別                 地域            状態                               ║
║ ▼    大雨注意報           隠岐                ▼解除                          ║
╠[詳細]════════════════════════════════════════════════════════════════════════╣
║   L3 大雨警報 雲南地区 … 一部                                                ║
║   L3 大雨警報 大田邑智地区 … 一部                                            ║
║   大雨注意報 隠岐 … 一部                                                     ║
╠[行動の目安]══════════════════════════════════════════════════════════════════╣
║   ☆ L3 警報 → 高齢者等は避難                                                 ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ VPWW55  2024-11-02 11:19:00  気象庁                                          ║
╚══════════════════════════════════════════════════════════════════════════════╝
"
`;

exports[`layout 指定時の displayWeatherWarningCore > 非デフォルト構成 snapshot: 並び替え + footer OFF 1`] = `
"

 ☆ L3 大雨警報　東部　解除 1

╔══════════════════════════════════════════════════════════════════════════════╗
║ 島根県大雨警報・注意報  発表  [警告]                                         ║
╠[行動の目安]══════════════════════════════════════════════════════════════════╣
║   ☆ L3 警報 → 高齢者等は避難                                                 ║
╠     ☆ 警報 (L3)      ════════════════════════════════════════════════════════╣
║ 級   種別                 地域            状態                               ║
║ ☆    L3 大雨警報          松江地区             継続                          ║
║ ☆    L3 大雨警報          出雲地区             継続                          ║
║ ☆    L3 大雨警報          雲南地区             継続                          ║
║ ☆    L3 大雨警報          大田邑智地区         継続                          ║
║ ☆    L3 大雨警報          浜田地区             継続                          ║
║ ☆    L3 大雨警報          益田地区             継続                          ║
╠        ▼ 解除        ════════════════════════════════════════════════════════╣
║ 級   種別                 地域            状態                               ║
║ ▼    大雨注意報           隠岐                ▼解除                          ║
╠[詳細]════════════════════════════════════════════════════════════════════════╣
║   L3 大雨警報 雲南地区 … 一部                                                ║
║   L3 大雨警報 大田邑智地区 … 一部                                            ║
║   大雨注意報 隠岐 … 一部                                                     ║
╚══════════════════════════════════════════════════════════════════════════════╝
"
`;
